infer-out/report.txt
#0
TestPrograms/python-ctools-demo/temp_run.cpp:22: error: Taint Error
  Other(taint()) at line 17, column 17 ~> Other(sink()) at line 22, column 2.
  20. 	double ans;
  21. 	ans = ts_cos(tVal1, tVal3);
  22. 	sink(ans);
       ^
  23. }

Found 1 issue
         Issue Type(ISSUED_TYPE_ID): #
  Taint Error(QUANDARY_TAINT_ERROR): 1
